<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:icon="@drawable/cloud"
        android:title="@string/weather_forecast" />
    <item
        android:id="@+id/recommend"
        android:icon="@drawable/recommend_icon"
        android:title="@string/recommendation" />
    <item
        android:id="@+id/diseases"
        android:icon="@drawable/virus"
        android:title="@string/disease_detection" />
    <item
        android:id="@+id/help"
        android:icon="@drawable/help"
        android:title="@string/help" />
    <item
        android:id="@+id/about"
        android:icon="@drawable/about"
        android:title="@string/about" />
    <!--<item android:id="@+id/settings" android:title="@string/settings" android:icon="@drawable/setting"/>-->
</menu>