<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="180dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/purple_700"
        android:layout_height="50dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/confirm_exit"
            android:textSize="@dimen/h2_text"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/white"
            />
    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:padding="4dp"
    android:layout_height="80dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/confirm_exit_text"
        android:textColor="@color/black"
        android:textSize="@dimen/h3_text"
        android:gravity="center_vertical"
        />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:background="#20D53C0D"
        android:padding="0dp"
        android:orientation="horizontal"
        android:weightSum="6"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/noBtn"
            android:layout_width="wrap_content"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:backgroundTint="#121010"
            android:text="@string/no"
            android:textColor="@color/white" />
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/yesBtn"
            android:layout_width="wrap_content"
            android:text="@string/yes"
            android:layout_weight="3"
            android:textColor="@color/white"
            android:backgroundTint="#0B5A0F"
            android:layout_marginEnd="8dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>