<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/pick_date_range"
        android:textColor="@color/white"
        android:textSize="@dimen/h3_text"
        android:gravity="center"
        android:layout_gravity="center_vertical"
        android:background="@color/purple_700"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:padding="8dp"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:background="#0AD53C0D">
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/start_date"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_alignParentStart="true"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:backgroundTint="@color/purple_700"
            android:text="@string/end_date"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:padding="8dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/yearWrapper"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:hint="@string/year">

            <AutoCompleteTextView
                android:id="@+id/year_dropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:background="#ccc" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/circle_bg_xl"
            android:backgroundTint="#ccc"
            android:gravity="center"
            android:text="TO"
            android:textColor="#111"
            android:textSize="@dimen/tiny_text"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="wrap_content"
            android:layout_below="@id/yearWrapper"
            android:id="@+id/month1Input"
            android:layout_marginTop="8dp"
            android:layout_alignParentStart="true"
            android:layout_height="wrap_content"
            android:hint="@string/month">

            <AutoCompleteTextView
                android:id="@+id/month_dropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="140dp"
            android:layout_below="@id/month1Input"
            android:layout_marginTop="8dp"
            android:layout_alignParentStart="true"
            android:layout_height="wrap_content"
            android:hint="@string/week">

            <AutoCompleteTextView
                android:id="@+id/week1_dropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/yearWrapper2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:hint="@string/year">

            <AutoCompleteTextView
                android:id="@+id/year_dropdown2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="140dp"
            android:layout_below="@id/month2Input"
            android:layout_marginTop="8dp"
            android:layout_alignParentEnd="true"
            android:layout_height="wrap_content"
            android:hint="@string/week">

            <AutoCompleteTextView
                android:id="@+id/week2_dropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="wrap_content"
            android:layout_below="@id/yearWrapper"
            android:id="@+id/month2Input"
            android:layout_marginTop="8dp"
            android:layout_alignParentEnd="true"
            android:layout_height="wrap_content"
            android:hint="@string/month">

            <AutoCompleteTextView
                android:id="@+id/month_dropdown2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>
        <ProgressBar
            android:id="@+id/queryDataProg"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingHorizontal="6dp"
        android:background="#0AD53C0D">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancelBtn"
            android:layout_width="wrap_content"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:layout_alignParentStart="true"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/okBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="OK"
            android:textColor="@color/white"
            android:backgroundTint="@color/purple_700"
            android:textAllCaps="false" />
    </RelativeLayout>
</LinearLayout>