<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DiseaseDetection">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/button"
        android:text="@string/take_picture"
        android:textAllCaps="false"
        android:layout_above="@id/button2"
        android:textSize="21sp"
        android:textStyle="bold"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/button2"
        android:text="@string/launch_gallery"
        android:textAllCaps="false"
        android:layout_alignParentBottom="true"
        android:textSize="21sp"
        android:textStyle="bold"
        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="350sp"
        android:layout_height="350sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/classified_as"
        android:textStyle="bold"
        android:textSize="20sp"
        android:id="@+id/classified"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="30sp"
        />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/classified"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:lineSpacingExtra="3dp"
        android:text=""
        android:textColor="#C30000"
        android:textSize="15sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/confidence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/result"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:lineSpacingExtra="3dp"
        android:text=""
        android:textColor="#C30000"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/reco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confidence"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:lineSpacingExtra="3dp"
        android:text=""
        android:textColor="#C30000"
        android:textSize="15sp"
        android:textStyle="bold" />


</RelativeLayout>